Installment access agg functions
git-svn-id: http://svn.codehaus.org/esper/esper/branches/enhancements400@2176 d91eb1b3-1215-0410-9718-d41490442091